# Rusdle

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
assets/: AppIcon.icns
scripts/: gen_macos_icon.py
src/: game.rs  main.rs  stats.rs  words.rs
