[package]
name = "rusdle"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Windows: no console window in release builds
[[bin]]
name = "rusdle"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Rusdle"
identifier = "com.rusdle.game"
icon = []
